--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
     <script>
         // Custom 72-color sequence
         const baseColors = [
-            "#ADD8E6", "#90EE90", "#00FFFF", "#8B4513", "#B0C4DE", "#32CD32", "#A52A2A", "#FFB7C5",
-            "#708090", "#87CEEB", "#FFFFFF", "#EE82EE", "#7FFF00", "#F0FFFF", "#FFC0CB", "#228B22",
-            "#8B4513", "#7CFC00", "#FF6347", "#FFD700", "#8B008B", "#32CD32", "#FFD700", "#808080",
-            "#5A4FCF", "#006400", "#8B4513", "#F5DEB3", "#FFB6C1", "#8B4513", "#FFFFFF", "#A0522D",
-            "#778899", "#87CEFA", "#32CD32", "#D3D3D3", "#FFFFFF", "#87CEEB", "#FFD700", "#F0FFF0",
-            "#FFFFE0", "#87CEFA", "#A9A9A9", "#8B4513", "#DEB887", "#FFFFFF", "#FFC300", "#006400",
-            "#F8F8FF", "#D3D3D3", "#FFA500", "#FFC0CB", "#778899", "#FFFF31", "#C0C0C0", "#8B4513",
-            "#FFA500", "#B0C4DE", "#8B4513", "#F5F5F5", "#7CFC00", "#8B4513", "#FFFACD", "#7CFC00",
-            "#00CED1", "#CD853F", "#FFD700", "#00CED1", "#FFFFF0", "#D3D3D3", "#AFDBF5", "#808080"
+            "#FFB7C5", "#32CD32", "#87CEEB", "#FFD700", "#FF8C00", "#DC143C", "#D8E7EC", "#E6E6FA",
+    "#A020F0", "#DAA520", "#AFEEEE", "#8FBC8F", "#FFD800", "#FFF5EE", "#00CED1", "#FFB6C1",
+    "#FF4500", "#9ACD32", "#DDA0DD", "#F4A460", "#228B22", "#FFBF00", "#5F9EA0", "#DA70D6",
+    "#FFDA03", "#FFE4E1", "#DAA520", "#FFE5B4", "#FFFFF0", "#4169E1", "#98FB98", "#DC143C",
+    "#C9A0DC", "#FAFAD2", "#FF66B2", "#FFC30B", "#40E0D0", "#C8A2C8", "#01796F", "#DA70D6",
+    "#FFEFD5", "#B0E0E6", "#FFA6C9", "#FFD700", "#9932CC", "#FF7F50", "#CCCCFF", "#FFD700",
+    "#7FFF00", "#4682B4", "#FFC72C", "#E6E6FA", "#FF8C00", "#AFEEEE", "#FFB6C1", "#ADFF2F",
+    "#9400D3", "#D3D3D3", "#FF7F50", "#000080", "#FFBF00", "#FFA500", "#DC143C", "#DDA0DD",
+    "#32CD32", "#B0E0E6", "#CC5500", "#7B68EE", "#FFF44F", "#00FFFF", "#228B22", "#FFFACD"
         ];
 
         // Function to interpolate between two colors
