--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cheerful Color Zoom App</title>
+    <title>72estaciones App</title>
     <style>
         /* Basic page layout */
         body, html {
